test/golden/obj-assert-fails-eq.golden
Runtime error: Assertion failed
  ./test/golden/obj-assert-fails-eq.jsonnet:4:1-5:1 